--- a/workshop2/assets/css/style.css
+++ b/workshop2/assets/css/style.css
@@ -7,10 +7,48 @@ body {
 }
 #header {
     background-color: dodgerblue;
-    height: 60px;
+    height: 50px;
     width: 100%;
     background-image: url(../img/coolblue.png);
     background-repeat: no-repeat;
     background-size: 80px;
-    background-position-y: -10px;
+    background-position-y: -16px;
+    background-position-x: 25px;
+}
+#firstheader, #secondheader {
+    color:darkblue;
+    padding-left: 12%;
+}
+#firstheader p , #secondheader p{
+    font-size: 20px;
+    margin-top: -20px;
+    color: dodgerblue;
+}
+#mainform, #secform {
+    display: flex;
+    flex-direction: row;
+}
+#lable {
+    text-align: right;
+    width: 29%;
+    margin-right: 18px;
+}
+form p {
+    margin-bottom: -2.5px;
+}
+#submitfield {
+    margin-left: 12%;
+    margin-top: 10px;
+    background-color: lightgrey;
+    height: 50px;
+    width: 50%;
+}
+#submitbutton {
+    background-color: rgb(0, 218, 29);
+    text-align: center;
+    color: white;
+    margin: 5px;
+    float: right;
+    height: 80%;
+    width: 120px;
 }
